@@ -1,3 +1,10 @@
+2015-04-27  Andrea Bernardini <andrebask@gmail.com>
+	    Per Bothner  <per@bothner.com>
+
+	* classes2.scm: New test, for redefinition of variable bound
+	to function.  Needs seperate/explicit compilation to trigger.
+	* obj-test.scm: Apply new test.
+
 2015-04-16  Andrea Bernardini <andrebask@gmail.com>
 	    Per Bothner  <per@bothner.com>
 
